src/v8/CAPI_CapControls.pas

unit CAPI_CapControls;

{$inline on}

interface

uses
    CAPI_Utils;

procedure CapControls_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
procedure CapControls_Get_AllNames_GR(); CDECL;
function CapControls_Get_Capacitor(): PAnsiChar; CDECL;
function CapControls_Get_CTratio(): Double; CDECL;
function CapControls_Get_DeadTime(): Double; CDECL;
function CapControls_Get_Delay(): Double; CDECL;
function CapControls_Get_DelayOff(): Double; CDECL;
function CapControls_Get_First(): Integer; CDECL;
function CapControls_Get_Mode(): Integer; CDECL;
function CapControls_Get_MonitoredObj(): PAnsiChar; CDECL;
function CapControls_Get_MonitoredTerm(): Integer; CDECL;
function CapControls_Get_Name(): PAnsiChar; CDECL;
function CapControls_Get_Next(): Integer; CDECL;
function CapControls_Get_OFFSetting(): Double; CDECL;
function CapControls_Get_ONSetting(): Double; CDECL;
function CapControls_Get_PTratio(): Double; CDECL;
function CapControls_Get_UseVoltOverride(): Wordbool; CDECL;
function CapControls_Get_Vmax(): Double; CDECL;
function CapControls_Get_Vmin(): Double; CDECL;
procedure CapControls_Set_Capacitor(const Value: PAnsiChar); CDECL;
procedure CapControls_Set_CTratio(Value: Double); CDECL;
procedure CapControls_Set_DeadTime(Value: Double); CDECL;
procedure CapControls_Set_Delay(Value: Double); CDECL;
procedure CapControls_Set_DelayOff(Value: Double); CDECL;
procedure CapControls_Set_Mode(Value: Integer); CDECL;
procedure CapControls_Set_MonitoredObj(const Value: PAnsiChar); CDECL;
procedure CapControls_Set_MonitoredTerm(Value: Integer); CDECL;
procedure CapControls_Set_Name(const Value: PAnsiChar); CDECL;
procedure CapControls_Set_OFFSetting(Value: Double); CDECL;
procedure CapControls_Set_ONSetting(Value: Double); CDECL;
procedure CapControls_Set_PTratio(Value: Double); CDECL;
procedure CapControls_Set_UseVoltOverride(Value: Wordbool); CDECL;
procedure CapControls_Set_Vmax(Value: Double); CDECL;
procedure CapControls_Set_Vmin(Value: Double); CDECL;
function CapControls_Get_Count(): Integer; CDECL;
procedure CapControls_Reset(); CDECL;

implementation

uses
    CAPI_Constants,
    DSSGlobals,
    Executive,
    ControlElem,
    CapControl,
    CapControlVars,
    SysUtils,
    PointerList;

function ActiveCapControl: TCapControlObj;
begin
    Result := NIL;
    if ActiveCircuit[ActiveActor] <> NIL then
        Result := ActiveCircuit[ActiveActor].CapControls.Active;
end;
//------------------------------------------------------------------------------
procedure Set_Parameter(const parm: String; const val: String);
var
    cmd: String;
begin
    if not Assigned(ActiveCircuit[ActiveActor]) then
        exit;
    SolutionAbort := FALSE;  // Reset for commands entered from outside
    cmd := Format('capcontrol.%s.%s=%s', [ActiveCapControl.Name, parm, val]);
    DSSExecutive.Command := cmd;
end;
//------------------------------------------------------------------------------
procedure CapControls_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
var
    Result: PPAnsiCharArray;
    elem: TCapControlObj;
    lst: TPointerList;
    k: Integer;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    if ActiveCircuit[ActiveActor] <> NIL then
        with ActiveCircuit[ActiveActor] do
            if CapControls.ListSize > 0 then
            begin
                lst := CapControls;
                DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (lst.ListSize - 1) + 1);
                k := 0;
                elem := lst.First;
                while elem <> NIL do
                begin
                    Result[k] := DSS_CopyStringAsPChar(elem.Name);
                    Inc(k);
                    elem := lst.Next;
                end;
            end;
end;

procedure CapControls_Get_AllNames_GR(); CDECL;
// Same as CapControls_Get_AllNames but uses global result (GR) pointers
begin
    CapControls_Get_AllNames(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function CapControls_Get_Capacitor_AnsiString(): Ansistring; inline;
var
    elem: TCapControlObj;
begin
    Result := '';
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.This_Capacitor.Name;
end;

function CapControls_Get_Capacitor(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(CapControls_Get_Capacitor_AnsiString());
end;
//------------------------------------------------------------------------------
function CapControls_Get_CTratio(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.CTRatioVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_DeadTime(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.DeadTimeVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Delay(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.OnDelayVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_DelayOff(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.OffDelayVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_First(): Integer; CDECL;
var
    elem: TCapControlObj;
    lst: TPointerList;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        lst := ActiveCircuit[ActiveActor].CapControls;
        elem := lst.First;
        if elem <> NIL then
        begin
            repeat
                if elem.Enabled then
                begin
                    ActiveCircuit[ActiveActor].ActiveCktElement := elem;
                    Result := 1;
                end
                else
                    elem := lst.Next;
            until (Result = 1) or (elem = NIL);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Mode(): Integer; CDECL;
var
    elem: TCapControlObj;
begin
    Result := dssCapControlVoltage;
    elem := ActiveCapControl;
    if elem <> NIL then
    begin
        case elem.CapControlType of
            CURRENTCONTROL:
                Result := dssCapControlCurrent;
            VOLTAGECONTROL:
                Result := dssCapControlVoltage;
            KVARCONTROL:
                Result := dssCapControlKvar;
            TIMECONTROL:
                Result := dssCapControlTime;
            PFCONTROL:
                Result := dssCapControlPF;
            USERCONTROL:
                Result := dssCapControlPF;
        end;
    end;
end;
//------------------------------------------------------------------------------
function CapControls_Get_MonitoredObj_AnsiString(): Ansistring; inline;
var
    elem: TCapControlObj;
begin
    Result := '';
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.ElementName;
end;

function CapControls_Get_MonitoredObj(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(CapControls_Get_MonitoredObj_AnsiString());
end;
//------------------------------------------------------------------------------
function CapControls_Get_MonitoredTerm(): Integer; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.ElementTerminal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Name_AnsiString(): Ansistring; inline;
var
    elem: TCapControlObj;
begin
    Result := '';
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.Name;
end;
